
2017-10-06  Edward Hart <edward.dan.hart@gmail.com>

	* general: added record-delimiter, sequential-delimiters and
	  record-delim-with-fixed-recs options.

2017-09-18  Ron Norman <rjn@inglenet.com>

	* general: Added option for disallowing SELECT ASSIGN and RELATIVE
	  KEY fields to be in other than WORKING-STORAGE locations

2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* ibm.words: updated to Enterprise COBOL V6.2.
	* general: added free-redefines-position option.

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* general: added line-col-zero-default and display-special-fig-consts
	  options.

2017-09-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf, mf-strict.conf: set incorrect-conf-sec-order
	  from "error" to "ok"

2017-08-11  Edward Hart <edward.dan.hart@gmail.com>

	* general: moved all register definitions to the words files.
	* general: added unimplemented registers as reserved words.

2017-08-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf: set entry-statement from "obsolete" to "ok"

2017-08-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* lax.conf-inc: odo-without-to and incorrect-conf-sec-order set to
	  "at least warning" instead of "ok"

2017-07-29  Edward Hart <edward.dan.hart@gmail.com>

	* bs2000-strict.conf: further corrections.

2017-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* mf.words: updated to Visual COBOL 3.0.
	* bs2000-strict.conf: corrected using actual COBOL2000 manual.

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: allow GnuCOBOL specific registers for lax dialect
	  configurations

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf: set word-length to most unrestrictive value: 61

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added move-figurative-constant-to-numeric and
	  move-figurative-quote-to-numeric option
