@@ -167,7 +167,7 @@ alter-statement:			obsolete
 comment-paragraphs:			obsolete
 call-overflow:				ok
 data-records-clause:			obsolete
-debugging-mode:				obsolete
+debugging-mode:				ok
 use-for-debugging:			obsolete
 listing-statements:			skip	# may be a user-defined word
 title-statement:			skip	# may be a user-defined word
