@@ -2528,124 +2528,6 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
 AT_CLEANUP
 
 
-AT_SETUP([DEBUG (not active)])
-AT_KEYWORDS([extensions])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-           DISPLAY "OK" NO ADVANCING
-           END-DISPLAY.
-      D    DISPLAY "KO" NO ADVANCING
-      D    END-DISPLAY.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[OK])
-
-AT_CLEANUP
-
-
-AT_SETUP([DEBUG (fdebugging-line)])
-AT_KEYWORDS([extensions])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-           DISPLAY "OK" NO ADVANCING
-           END-DISPLAY.
-      D    DISPLAY "KO" NO ADVANCING
-      D    END-DISPLAY.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE -fdebugging-line prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[OKKO])
-
-AT_CLEANUP
-
-
-AT_SETUP([DEBUG (obsolete WITH DEBUGGING MODE)])
-AT_KEYWORDS([extensions])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       ENVIRONMENT DIVISION.
-       CONFIGURATION SECTION.
-           SOURCE-COMPUTER. mine WITH DEBUGGING MODE.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-      D    DISPLAY "KO" NO ADVANCING UPON STDOUT
-      D    END-DISPLAY.
-           DISPLAY "OK" NO ADVANCING UPON STDOUT
-           END-DISPLAY.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[KOOK])
-
-AT_CLEANUP
-
-
-AT_SETUP([DEBUG free format (not active)])
-AT_KEYWORDS([extensions])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-             DISPLAY "OK" NO ADVANCING
-             END-DISPLAY.
-      >>D    DISPLAY "KO" NO ADVANCING
-      >>D    END-DISPLAY.
-             STOP RUN.
-])
-
-AT_CHECK([$COMPILE -free prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[OK])
-
-AT_CLEANUP
-
-
-AT_SETUP([DEBUG free format (fdebugging-line)])
-AT_KEYWORDS([extensions])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-             DISPLAY "OK" NO ADVANCING
-             END-DISPLAY.
-      >>D    DISPLAY "KO" NO ADVANCING
-      >>D    END-DISPLAY.
-             STOP RUN.
-])
-
-AT_CHECK([$COMPILE -free -fdebugging-line prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
-[OKKO])
-
-AT_CLEANUP
-
-
 AT_SETUP([SWITCHES with non-standard names])
 AT_KEYWORDS([runmisc extensions])
 
