@@ -1,4 +1,9 @@
 
+2017-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* testsuite.src/run_extensions.at, testsuite.src/run_fundamental.at:
+	  moved debuggging line checks from to run_fundamental.at
+
 2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* listings-sed.sh: use `` instead of $() - see Bug #437
